Update client location
